--- a/Source/Classes/MUCertificateCell.xib
+++ b/Source/Classes/MUCertificateCell.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">11A511</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1900</string>
-		<string key="IBDocument.AppKitVersion">1138</string>
-		<string key="IBDocument.HIToolboxVersion">566.00</string>
+		<string key="IBDocument.SystemVersion">11C74</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
+		<string key="IBDocument.AppKitVersion">1138.23</string>
+		<string key="IBDocument.HIToolboxVersion">567.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">894</string>
+			<string key="NS.object.0">933</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -50,7 +50,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{9, 11}, {64, 64}}</string>
 								<reference key="NSSuperview" ref="197535947"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
@@ -61,9 +60,8 @@
 							<object class="IBUILabel" id="86053166">
 								<reference key="NSNextResponder" ref="197535947"/>
 								<int key="NSvFlags">290</int>
-								<string key="NSFrame">{{86, 8}, {277, 21}}</string>
+								<string key="NSFrame">{{86, 8}, {279, 21}}</string>
 								<reference key="NSSuperview" ref="197535947"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="372228801"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -96,9 +94,8 @@
 							<object class="IBUILabel" id="372228801">
 								<reference key="NSNextResponder" ref="197535947"/>
 								<int key="NSvFlags">290</int>
-								<string key="NSFrame">{{86, 24}, {277, 22}}</string>
+								<string key="NSFrame">{{86, 24}, {279, 22}}</string>
 								<reference key="NSSuperview" ref="197535947"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="971521917"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -125,9 +122,8 @@
 							<object class="IBUILabel" id="971521917">
 								<reference key="NSNextResponder" ref="197535947"/>
 								<int key="NSvFlags">290</int>
-								<string key="NSFrame">{{86, 43}, {277, 21}}</string>
+								<string key="NSFrame">{{86, 43}, {279, 21}}</string>
 								<reference key="NSSuperview" ref="197535947"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="594857936"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -148,9 +144,8 @@
 							<object class="IBUILabel" id="594857936">
 								<reference key="NSNextResponder" ref="197535947"/>
 								<int key="NSvFlags">290</int>
-								<string key="NSFrame">{{86, 58}, {277, 21}}</string>
+								<string key="NSFrame">{{86, 58}, {279, 21}}</string>
 								<reference key="NSSuperview" ref="197535947"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -165,9 +160,8 @@
 								<reference key="IBUIFont" ref="679847498"/>
 							</object>
 						</object>
-						<string key="NSFrame">{{1, 0}, {383, 83}}</string>
+						<string key="NSFrameSize">{385, 83}</string>
 						<reference key="NSSuperview" ref="877875464"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="559002971"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -182,7 +176,6 @@
 				</object>
 				<string key="NSFrameSize">{385, 84}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="197535947"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
@@ -190,11 +183,6 @@
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<reference key="IBUIContentView" ref="197535947"/>
-				<object class="IBUIFontDescription" key="IBUIFontDescription">
-					<int key="type">1</int>
-					<int key="size">4</int>
-				</object>
-				<reference key="IBUIFont" ref="679847498"/>
 				<string key="IBUIReuseIdentifier">CertificateCell</string>
 			</object>
 		</object>
@@ -347,19 +335,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">28</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-				<object class="IBPartialClassDescription">
-					<string key="className">MUCertificateCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MUCertificateCell.h</string>
-					</object>
-				</object>
-			</object>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -376,6 +352,6 @@
 			<string key="NS.key.0">certificatecell.png</string>
 			<string key="NS.object.0">{64, 64}</string>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">894</string>
+		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
 </archive>
